Fix `gl` build error via dependency resolution
Also bumps the version of `node-gyp` transitive dependency to address a
security vulnerability.

--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
     "source-map": "0.7.3",
     "xmlhttprequest-ts": "^1.0.1"
   },
+  "resolutions": {
+    "**/gl": "^6.0.2"
+  },
   "scripts": {
     "build": "yarn docs && tsc --build --force",
     "build:slang": "tsc --build --force",
